; ModuleID = '/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_kari.c_cms_kari_create_ephemeral_key.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_kari.c_cms_kari_create_ephemeral_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*)* @cms_kari_create_ephemeral_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cms_kari_create_ephemeral_key(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32* null, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @EVP_PKEY_CTX_new(i32* %8, i32* null)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %40

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @EVP_PKEY_keygen_init(i32* %14)
  %16 = icmp sle i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  br label %40

18:                                               ; preds = %13
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @EVP_PKEY_keygen(i32* %19, i32** %6)
  %21 = icmp sle i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  br label %40

23:                                               ; preds = %18
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @EVP_PKEY_CTX_free(i32* %24)
  %26 = load i32*, i32** %6, align 8
  %27 = call i32* @EVP_PKEY_CTX_new(i32* %26, i32* null)
  store i32* %27, i32** %5, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %31

30:                                               ; preds = %23
  br label %40

31:                                               ; preds = %23
  %32 = load i32*, i32** %5, align 8
  %33 = call i64 @EVP_PKEY_derive_init(i32* %32)
  %34 = icmp sle i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %31
  br label %40

36:                                               ; preds = %31
  %37 = load i32*, i32** %5, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  store i32* %37, i32** %39, align 8
  store i32 1, i32* %7, align 4
  br label %40

40:                                               ; preds = %36, %35, %30, %22, %17, %12
  %41 = load i32, i32* %7, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %46, label %43

43:                                               ; preds = %40
  %44 = load i32*, i32** %5, align 8
  %45 = call i32 @EVP_PKEY_CTX_free(i32* %44)
  br label %46

46:                                               ; preds = %43, %40
  %47 = load i32*, i32** %6, align 8
  %48 = call i32 @EVP_PKEY_free(i32* %47)
  %49 = load i32, i32* %7, align 4
  ret i32 %49
}

declare dso_local i32* @EVP_PKEY_CTX_new(i32*, i32*) #1

declare dso_local i64 @EVP_PKEY_keygen_init(i32*) #1

declare dso_local i64 @EVP_PKEY_keygen(i32*, i32**) #1

declare dso_local i32 @EVP_PKEY_CTX_free(i32*) #1

declare dso_local i64 @EVP_PKEY_derive_init(i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
